Bullet tracer - added python rest api and integration to quarkus

--- a/recommender-web-shop-backend/src/main/resources/application.properties
+++ b/recommender-web-shop-backend/src/main/resources/application.properties
@@ -8,3 +8,7 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/recommender-web-sho
 quarkus.liquibase.change-log=db/dbchangelog.xml
 quarkus.liquibase.enabled=true
 quarkus.liquibase.migrate-at-start=true
+
+#PYTHON RECOMMENDER API
+quarkus.rest-client.recommender-api.url=http://localhost:5000
+quarkus.rest-client.recommender-api.scope=jakarta.inject.Singleton
