Major refactoring to movie dataset, insert of movies to db

--- a/recommender-web-shop-backend/src/main/resources/application.properties
+++ b/recommender-web-shop-backend/src/main/resources/application.properties
@@ -11,4 +11,14 @@ quarkus.liquibase.migrate-at-start=true
 
 #PYTHON RECOMMENDER API
 quarkus.rest-client.recommender-api.url=http://localhost:5000
-quarkus.rest-client.recommender-api.scope=jakarta.inject.Singleton
+quarkus.rest-client.recommender-api.scope=jakarta.inject.Singleton'
+
+#DEBUG
+#quarkus.log.level=DEBUG
+
+quarkus.transaction-manager.default-transaction-timeout = 540s
+
+quarkus.datasource.agroal.min-size=10
+quarkus.datasource.agroal.max-size=100
+quarkus.datasource.agroal.connection-timeout=60
+quarkus.datasource.agroal.idle-timeout=300
