--- a/recommender-web-shop-backend/src/main/resources/application.properties
+++ b/recommender-web-shop-backend/src/main/resources/application.properties
@@ -22,3 +22,11 @@ quarkus.datasource.agroal.min-size=10
 quarkus.datasource.agroal.max-size=100
 quarkus.datasource.agroal.connection-timeout=60
 quarkus.datasource.agroal.idle-timeout=300
+# Allow all origins, methods, and headers
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
+quarkus.http.cors.headers=Authorization,Content-Type,Accept,X-Requested-With,Origin
+quarkus.http.cors.exposed-headers=Authorization
+quarkus.http.cors.access-control-max-age=24H
+
